--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,6 @@ services:
 
 before_install:
     - docker build -t ajomathew/docker-react -f Dockerfile.dev .
+
+script:
+    - docker run -e CI=true ajomathew/docker-react npm run test
