Travis deployment updated

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,16 @@ before_install:
 
 script:
     - docker run -e CI=true ajomathew/docker-react npm run test
+
+deploy:
+    provider: elasticbeanstalk
+    region: "us-east-1"
+    env: "DockerEnv-env"
+    app: "docker-env"
+    bucket_name: "elasticbeanstalk-us-east-1-260058403328"
+    bucket_path: "docker"
+    on:
+        branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secrete_access_key:
+        secure: "$AWS_SECRET_KEY"
